--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
           <div class="progress-fill" id="progressFill" style="width: 0%"></div>
         </div>
         <div style="color: rgba(255, 255, 255, 0.6); font-size: 12px; text-align: center; margin-top: 10px;">
-          <span id="distanceToNext">0.500 miles to next segment</span>
+          <span id="distanceToNext">1.000 miles to next segment</span>
         </div>
       </div>
 
@@ -408,11 +408,9 @@
         <button id="resetBtn" class="btn btn-reset">
           🔄 Reset
         </button>
-        <button hidden class="btn btn-reset" onclick='generateStorySegment2()'>
-          Test App
-        </button>
       </div>
-
+      <br>
+      <h1>Lifetime Environmental Savings: </h1>
       <div id="generatingIndicator" style="display: none;" class="generating">
         ✨ Generating your story segment...
       </div>
@@ -506,6 +504,8 @@
     const generatingAudioIndicator = document.getElementById('generatingAudioIndicator');
 
     // Load saved state on startup
+        var impact = await localforage.getItem("environ");
+
     async function loadSavedState() {
       try {
         const savedApiKey = await localforage.getItem('apiKey');
@@ -572,6 +572,8 @@
     // Save state to LocalForage
     async function saveState() {
       try {
+        localforage.setItem("environ", impact)
+        document,querySelector("#envi").innerText = "Environmental Savings: " + impact + "kg";
         await localforage.setItem('apiKey', state.apiKey);
         await localforage.setItem('genre', state.genre);
         await localforage.setItem('distance', state.distance);
@@ -666,7 +668,7 @@
 
         const timeDiffHours = (currentTime - state.lastTime) / 1000 / 3600;
 
-        if (dist > 0.001 && dist < 0.5 && timeDiffHours > 0) {
+        if (dist > 0.001 && dist < 1 && timeDiffHours > 0) {
           state.distance += dist;
           distanceDisplay.textContent = state.distance.toFixed(3) + ' mi';
 
@@ -695,25 +697,27 @@
 
     function updateProgress() {
       const distanceSinceLastStory = state.distance - state.lastStoryDistance;
-      const progress = (distanceSinceLastStory / 0.5) * 100;
+      const progress = (distanceSinceLastStory / 1) * 100;
       progressFill.style.width = Math.min(progress, 100) + '%';
       progressPercent.textContent = Math.floor(progress) + '%';
-      distanceToNext.textContent = (0.5 - distanceSinceLastStory).toFixed(3) + ' miles to next segment';
+      distanceToNext.textContent = (1 - distanceSinceLastStory).toFixed(3) + ' miles to next segment';
     }
     var blob;
     function checkForNewSegment() {
       const distanceSinceLastStory = state.distance - state.lastStoryDistance;
-      if (state.isTracking && distanceSinceLastStory >= 0.5 && !state.isGenerating) {
-        const segmentNumber = Math.floor(state.distance / 0.5);
+      if (state.isTracking && distanceSinceLastStory >= 1 && !state.isGenerating) {
+        const segmentNumber = Math.floor(state.distance / 1);
         const avgSpeed = state.speedHistory.length > 0
           ? state.speedHistory.reduce((a, b) => a + b, 0) / state.speedHistory.length
           : 3;
         generateStorySegment(segmentNumber, avgSpeed);
+
         state.lastStoryDistance = state.distance;
       }
     }
 
     async function generateStorySegment(segmentNumber, avgSpeed) {
+      impact += 0.39997;
       if (!state.apiKey) {
         alert('Please enter your Google AI Studio API key first!');
         return;
