--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
           <option value="Dystopian Future">Dystopian Future</option>
         </select>
         <select id="trans" onchange="transchange()" class="genre-select">
-          <option value="Walking/Biking/On Foot">Fantasy Adventure</option>
-          <option value="Carpool">Mystery Detective</option>
+          <option value="Walking/Biking/On Foot">Walking/Biking/On Foot</option>
+          <option value="Carpooling">Carpooling/option>
         </select>
 
         <div class="permissions-box">
@@ -707,6 +707,7 @@
             }
 
           }
+        }
           else {
             if (dist > 0.001 && dist < 5 && timeDiffHours > 0) {
               state.distance += dist;
@@ -807,7 +808,7 @@
               'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.' :
               'This is segment ' + segmentNumber + '. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nHere is the story so far, which you will continue on: ' + storyText
             ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
-
+ 
         }
         try {
           const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent?key=' + state.apiKey, {
