--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </select>
         <select id="trans" onchange="transchange()" class="genre-select">
           <option value="Walking/Biking/On Foot">Walking/Biking/On Foot</option>
-          <option value="Carpooling">Carpooling/option>
+          <option value="Carpooling">Carpooling</option>
         </select>
 
         <div class="permissions-box">
