--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
       }
 
       async function generateStorySegment(segmentNumber, avgSpeed) {
-        impact += 0.39997;
+
         if (!state.apiKey) {
           alert('Please enter your Google AI Studio API key first!');
           return;
@@ -796,6 +796,7 @@
             'reflective and atmospheric';
         var prompt;
         if (mode === "w") {
+                  impact += 0.39997;
           prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a runner, and they have been running at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '. It should be in second person with me as the main character, almost like roleplay.\n\n' +
             (segmentNumber === 1 ?
               'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 18-20 paragraphs.' :
@@ -803,6 +804,7 @@
             ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
         }
         else {
+                  impact += 400*people-0.0003
           prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a group of  ' + people + ' people in a car, and they have been driving at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '. It should be in second person with me as the main character, almost like roleplay.\n\n' +
             (segmentNumber === 1 ?
               'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.' :
