Fix mode variable assignment in index.html

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
   <script>
     // Configure LocalForage
     var people = 1;
-    var mode = w;
+    var mode = "w";
     function transchange() {
       if (document.querySelector("#trans").value.includes("Walk")) {
         mode = "w";
