--- a/index.html
+++ b/index.html
@@ -887,17 +887,12 @@
         });
 
         au.src = await response.text();
+        au.controls = true
         document.body.appendChild(au);
-        au.play();
-        var toggle = document.querySelector("#resetBtn").cloneNode(true);
-        toggle.id = "toggle";
-        toggle.innerText = "Toggle Audio";
-        toggle.onclick = () => {
-          if (au.paused) au.play();
-          else au.pause();
-        }
+        
+        au.play()
         document.querySelector(".buttons").appendChild(toggle);
-        au.onended = () => { toggle.remove() };
+        
 
       }
 
