--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
         <button id="resetBtn" class="btn btn-reset">
           🔄 Reset
         </button>
+         <button onclick="generateStorySegment(10,1)" class="btn btn-start">
+          ▶️ Test Code
+        </button>
       </div>
       <br>
       <h1 id="envi">Lifetime Carbon Savings: </h1>
