--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Journey AI</title>
   <link rel="manifest" href="manifest.json">
-  <script src="hhttps://cdn.jsdelivr.net/npm/@tgwf/co2@latest/dist/iife/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tgwf/co2@latest/dist/iife/index.js"></script>
   <script src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
   <script src="https://unpkg.com/ejs/ejs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jepub/dist/jepub.js"></script>
