--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
   </div>
 
   <script>
-    const swd = new co2({ model: "swd" });
+    const swd = new co2.co2({ model: "swd" });
 
     const emissions = swd.perVisit(43930);
 
