--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
   <script>
     const swd = new co2.co2({ model: "swd" });
 
-    const emissions = swd.perVisit(43930);
+    const emissions = swd.perByte(43930);
 
     // Configure LocalForage
     var people = 1;
