--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
 
       au.src = await response.text();
       au.controls = true;
-      document.querySelectorAll("#story-segment")[document.querySelectorAll("#story-segment").length - 1].appendChild(au);
+      document.querySelectorAll(".story-segment")[document.querySelectorAll(".story-segment").length - 1].appendChild(au);
 
       au.play()
 
