--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
 
     let state = {
       apiKey: '',
+      audio: [],
       genre: '',
       isTracking: false,
       distance: 0,
@@ -527,6 +528,9 @@
 
     // Load saved state on startup
     var impact;
+    function addaudio(aud){
+      document.querySelectorAll(".story-segment")[document.querySelectorAll(".story-segment").length - 1].appendChild(aud)
+    }
 
     async function loadSavedState() {
       try {
@@ -566,9 +570,11 @@
 
         if (savedStorySegments) {
           state.storySegments = savedStorySegments;
-          savedStorySegments.forEach(segment => {
-            displayStorySegment(segment);
-          });
+          for (let i = 0; i < state.storysegments.length; i++) {
+            displayStorySegment(state.storysegments[i]);
+            addaudio(state.audio[i]);
+
+          }
         }
 
         if (savedLastStoryDistance !== null) {
@@ -810,7 +816,7 @@
           ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
       }
       else {
-        impact += (400 * (people-1) - 0.0003 - emissions) / 1000;
+        impact += (400 * (people - 1) - 0.0003 - emissions) / 1000;
         prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a group of  ' + people + ' people in a car, and they have been driving at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '. It should be in second person with me as the main character, almost like roleplay.\n\n' +
           (segmentNumber === 1 ?
             'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.' :
