--- a/index.html
+++ b/index.html
@@ -570,8 +570,8 @@
 
         if (savedStorySegments) {
           state.storySegments = savedStorySegments;
-          for (let i = 0; i < state.storysegments.length; i++) {
-            displayStorySegment(state.storysegments[i]);
+          for (let i = 0; i < state.storySegments.length; i++) {
+            displayStorySegment(state.storySegments[i]);
 
           }
           for (let i = 0; i < state.audio.length; i++) {
