fix static files

--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
     async function speakText(text) {
       generatingAudioIndicator.style.display = 'none';
       const response = await fetch('/generate-speech', { // This endpoint will be handled by your backend
-        method: 'GET',
+        method: 'POST',
         body: text,
       });
 
