--- a/public/index.html
+++ b/public/index.html
@@ -896,8 +896,7 @@
     async function speakText(text) {
       generatingAudioIndicator.style.display = 'none';
       const response = await fetch('/generate-speech', { // This endpoint will be handled by your backend
-        method: 'POST',
-        body: text,
+        method: 'GET'
       });
 
       au.src = await response.text();
