--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,29 @@
     }
 
   </script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDbDYmHmHTKnqV3XAC9HAiENsaa59Xw-Qc",
+    authDomain: "storyrun-bf641.firebaseapp.com",
+    projectId: "storyrun-bf641",
+    storageBucket: "storyrun-bf641.firebasestorage.app",
+    messagingSenderId: "622139831473",
+    appId: "1:622139831473:web:796d3e627944d694cf1e90",
+    measurementId: "G-MR25R1M4BW"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 
 </html>
