--- a/index.html
+++ b/index.html
@@ -896,7 +896,8 @@
     async function speakText(text) {
       generatingAudioIndicator.style.display = 'none';
       const response = await fetch('/generate-speech', { // This endpoint will be handled by your backend
-        method: 'GET'
+        method: 'POST',
+        body: text
       });
 
       au.src = await response.text();
