--- a/public/index.html
+++ b/public/index.html
@@ -452,7 +452,7 @@
         i18n: 'en',
         title: filename,
         author: 'JourneyAI',
-        publisher: 'n/a',
+        publisher: 'JourneyAI',
         description: 'a running story',
       });
       var num = 0
