--- a/index.html
+++ b/index.html
@@ -340,10 +340,13 @@
           <option value="Sci-Fi Thriller">Sci-Fi Thriller</option>
           <option value="Mystery Detective">Mystery Detective</option>
           <option value="Horror Survival">Horror Survival</option>
+          <option value="Horror Gothic">Horror Gothic</option>
+          <option value="Horror Physchological">Horror Physchological</option>
           <option value="Romance Comedy">Romance Comedy</option>
           <option value="Historical Fiction">Historical Fiction</option>
           <option value="Superhero Action">Superhero Action</option>
           <option value="Dystopian Future">Dystopian Future</option>
+          <option value=""><input type="text" name="custom" placeholder="Custom Genre/Plot" onchange="this.parent.value = this.value"></option>
         </select>
         <select id="trans" onchange="transchange()" class="genre-select">
           <option value="Walking/Biking/On Foot">Walking/Biking/On Foot</option>
