--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           <option value="Historical Fiction">Historical Fiction</option>
           <option value="Superhero Action">Superhero Action</option>
           <option value="Dystopian Future">Dystopian Future</option>
-          <option value=""><input type="text" name="custom" placeholder="Custom Genre/Plot" onchange="this.parent.value = this.value"></option>
+          <option value="custom"><input type="text" name="custom" placeholder="Custom Genre/Plot" onchange="this.parent.value = this.value"></option>
         </select>
         <select id="trans" onchange="transchange()" class="genre-select">
           <option value="Walking/Biking/On Foot">Walking/Biking/On Foot</option>
