--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
   <script src="https://unpkg.com/ejs/ejs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jepub/dist/jepub.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/edge-tts-client@1.0.2/dist/index.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
   <style>
     * {
@@ -346,7 +347,8 @@
           <option value="Historical Fiction">Historical Fiction</option>
           <option value="Superhero Action">Superhero Action</option>
           <option value="Dystopian Future">Dystopian Future</option>
-          <option value="custom"><input type="text" name="custom" placeholder="Custom Genre/Plot" onchange="this.parent.value = this.value"></option>
+          <option value="custom"><input type="text" name="custom" placeholder="Custom Genre/Plot"
+              onchange="this.parent.value = this.value"></option>
         </select>
         <select id="trans" onchange="transchange()" class="genre-select">
           <option value="Walking/Biking/On Foot">Walking/Biking/On Foot</option>
@@ -812,7 +814,7 @@
           ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
       }
       else {
-        impact += (400 * (people-1) - 0.0003 - emissions) / 1000;
+        impact += (400 * (people - 1) - 0.0003 - emissions) / 1000;
         prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a group of  ' + people + ' people in a car, and they have been driving at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '. It should be in second person with me as the main character, almost like roleplay.\n\n' +
           (segmentNumber === 1 ?
             'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.' :
@@ -889,16 +891,34 @@
 
     async function speakText(text) {
       generatingAudioIndicator.style.display = 'none';
-      const response = await fetch('/generate-speech', { // This endpoint will be handled by your backend
-        method: 'POST',
-        body: text,
-      });
+      const ttsClient = new EdgeTTSClient();
 
-      au.src = await response.text();
+      // Set metadata for synthesis
+      await ttsClient.setMetadata('en-US-AndrewMultilingual', OUTPUT_FORMAT.AUDIO_24KHZ_48KBITRATE_MONO_MP3);
+
+      // Define SSML options
+      const options = new ProsodyOptions();
+      options.pitch = 'medium';
+      options.rate = 1.2;
+      options.volume = 90;
+
+      // Synthesize text to a stream
+      const stream = ttsClient.toStream(text, options);
+
+      var chunks = []
+      // Handle the audio stream
+      stream.on('data', (audioChunk) => {
+        chunks.push(audioChunk);
+        console.log('Received audio chunk:', audioChunk);
+      });
+      stream.on('end', () => {
+        au.src = URL.createObjectURL(new Blob(chunks, {type: "audio/mp3"}))
       au.controls = true;
       document.querySelectorAll(".story-segment")[document.querySelectorAll(".story-segment").length - 1].appendChild(au);
 
       au.play()
+      })
+      
 
 
     }
