--- a/public/index.html
+++ b/public/index.html
@@ -415,7 +415,7 @@
         <button id="resetBtn" class="btn btn-reset">
           🔄 Reset
         </button>
-        <button onclick="generateStorySegment(1,10)" class="btn btn-start">
+        <button onclick="generateStorySegment2()" class="btn btn-start">
           ▶️ Test Code
         </button>
       </div>
