--- a/public/index.html
+++ b/public/index.html
@@ -433,12 +433,12 @@
   </div>
 
 <script type="module">
-  import {EdgeTtsClient, ProsodyOptions, OUTPUT_FORMAT} from 'https://cdn.jsdelivr.net/npm/edge-tts-client@1.0.2/+esm'
+  import {EdgeTTSClient, ProsodyOptions, OUTPUT_FORMAT} from 'https://cdn.jsdelivr.net/npm/edge-tts-client@1.0.2/+esm'
     const swd = new co2.co2({ model: "swd" });
 
     const emissions = swd.perByte(43930);
 
-    // Configure LocalForage
+    //  LocalForage
     var people = 1;
     var mode = "w";
     function transchange() {
