--- a/public/index.html
+++ b/public/index.html
@@ -894,7 +894,7 @@
       const ttsClient = new EdgeTTSClient();
 
       // Set metadata for synthesis
-      await ttsClient.setMetadata('en-US-AndrewNeural', OUTPUT_FORMAT.AUDIO_24KHZ_48KBITRATE_MONO_MP3);
+      await ttsClient.setMetadata('en-US-BrianNeural', OUTPUT_FORMAT.AUDIO_24KHZ_48KBITRATE_MONO_MP3);
 
       // Define SSML options
       const options = new ProsodyOptions();
