fiux new segment

--- a/public/index.html
+++ b/public/index.html
@@ -925,6 +925,7 @@
           src: au.src
         };
               state.storySegments.push(newSegment);
+              console.log(newSegment)
       au.play()
       })
       
