--- a/public/index.html
+++ b/public/index.html
@@ -916,7 +916,7 @@
         au.src = URL.createObjectURL(new Blob(chunks, {type: "audio/mp3"}))
       au.controls = true;
       document.querySelectorAll(".story-segment")[document.querySelectorAll(".story-segment").length - 1].appendChild(au);
-
+au.onload = ()=>{
       newSegment = {
           segment: segmentNumber,
           text: storyText,
@@ -927,6 +927,7 @@
               state.storySegments.push(newSegment);
               console.log(newSegment)
       au.play()
+      }
       })
       
 
