--- a/public/index.html
+++ b/public/index.html
@@ -913,7 +913,8 @@
         console.log('Received audio chunk:', audioChunk);
       });
       stream.on('end', () => {
-        var url =  URL.createObjectURL(new Blob(chunks, {type: "audio/mp3"}))
+        var blob = new Blob(chunks, {type: "audio/mp3"})
+        var url =  URL.createObjectURL(blob)
         au.src = url
       au.controls = true;
       document.querySelectorAll(".story-segment")[document.querySelectorAll(".story-segment").length - 1].appendChild(au);
