--- a/public/index.html
+++ b/public/index.html
@@ -924,7 +924,7 @@
           text: storyText,
           speed: avgSpeed,
           timestamp: new Date().toLocaleTimeString(),
-          src: url
+          src: url.toString()
         };
               state.storySegments.push(newSegment);
               console.log(newSegment)
