--- a/public/beta.html
+++ b/public/beta.html
@@ -14,8 +14,8 @@
 
     <!-- EdgeTTS -->
     <script type="module">
-        import { EdgeTTS } from 'https://cdn.jsdelivr.net/npm/edge-tts-universal/dist/browser.js';
-        window.EdgeTTS = EdgeTTS;
+        import { EdgeTTSClient } from 'https://cdn.jsdelivr.net/npm/edge-tts-client/dist/browser.js';
+        window.EdgeTTS = EdgeTTSClient;
     </script>
 
     <style>
