--- a/public/beta.html
+++ b/public/beta.html
@@ -139,7 +139,7 @@
     </div>
 
 <script type="module">
-        import { EdgeTTSClient } from 'https://cdn.jsdelivr.net/npm/edge-tts-client/dist/browser.js';
+        import { EdgeTTSClient } from 'https://cdn.jsdelivr.net/npm/edge-tts-client@1.0.2/+esm';
         window.EdgeTTS = EdgeTTSClient;
             // --- State ---
         let state = {
